--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -1,5 +1,5 @@
 
 {% extends "!layout.html" %}
 {% block extrahead %}
-	<link rel="stylesheet" href="{{ pathto('_static/xivo.css', 1) }}" type="text/css" />
+	<link rel="stylesheet" href="{{ pathto('_static/css/xivo.css', 1) }}" type="text/css" />
 {% endblock %}
