--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -23,8 +23,8 @@
 
 {% block sidebar1 %} 
 <ul id="doc-versions">
-	<li class="other"><a href="/1.2">1.2</a></li>
-	<li class="current"><span>Documentation version: <strong>dev</strong></span></li>
+	<li class="other"><a href="/dev">dev</a></li>
+	<li class="current"><span>Documentation version: <strong>1.2</strong></span></li>
 </ul>
 {% endblock %}
 
