--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -10,13 +10,13 @@
 
 {% block relbaritems %}
 <div style="position: absolute; top:0; right: 180px;">
-	  <form class="search" action="/search.html" method="get">
+	<form class="search" action="/dev/search.html" method="get">
 		Quick search :
-	    <input type="text" name="q">
-	    <input type="submit" value="Go">
-	    <input type="hidden" name="check_keywords" value="yes">
-	    <input type="hidden" name="area" value="default">
-	  </form>
+		<input type="text" name="q">
+		<input type="submit" value="Go">
+		<input type="hidden" name="check_keywords" value="yes">
+		<input type="hidden" name="area" value="default">
+	</form>
 </div>
 	{{ super() }}
 {% endblock %}
