[fix] css and Quick search

--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -10,7 +10,7 @@
 
 {% block relbaritems %}
 <div style="position: absolute; top:0; right: 180px;">
-	  <form class="search" action="../search.html" method="get">
+	  <form class="search" action="/1.2/search.html" method="get">
 		Quick search :
 	    <input type="text" name="q">
 	    <input type="submit" value="Go">
