--- a/source/_templates/menu-1.2.3.html
+++ b/source/_templates/menu-1.2.3.html
@@ -1,5 +1,6 @@
 
 <ul id="doc-versions">
 	<li class="other"><a href="/1.2.2">1.2.2</a></li>
-	<li class="current"><span>Documentation version: <strong>dev</strong></span></li>
+	<li class="other"><a href="/dev">dev</a></li>
+	<li class="current"><span>Documentation version: <strong>1.2.3</strong></span></li>
 </ul>
