--- a/source/_templates/menu-1.2.5.html
+++ b/source/_templates/menu-1.2.5.html
@@ -1,6 +1,6 @@
-<ul id="doc-versions">
-    <li class="other"><a href="/1.2.3">1.2.3</a></li>
-    <li class="other"><a href="/1.2.4">1.2.4</a></li>
-    <li class="current"><span>Documentation version: <strong>dev</strong></span></li>
-</ul>
 
+<ul id="doc-versions">
+	<li class="other"><a href="/1.2.4">1.2.4</a></li>
+	<li class="other"><a href="/dev">dev</a></li>
+	<li class="current"><span>Documentation version: <strong>1.2.5</strong></span></li>
+</ul>
