fox code styling ofr layout.html

--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -1,38 +1,19 @@
 {% extends "!layout.html" %} 
 
-{% block extrahead %}
-	<link rel="stylesheet" href="{{ pathto('_static/css/xivo.css', 1) }}" type="text/css" />
-{% endblock %} 
+{% block doctype %}<!doctype html>{% endblock %}
 
-{% block rootrellink %}
-	{{ super() }}
-{% endblock %}
+{% block extrahead %}<link rel="stylesheet" href="{{ pathto('_static/css/xivo.css', 1) }}" type="text/css" />{% endblock %}
 
-{% block relbaritems %}
-<!--
-<div style="position: absolute; top:0; right: 180px;">
-	<form class="search" action="/dev/search.html" method="get">
-		Quick search :
-		<input type="text" name="q">
-		<input type="submit" value="Go">
-		<input type="hidden" name="check_keywords" value="yes">
-		<input type="hidden" name="area" value="default">
-	</form>
-</div>
--->
-	{{ super() }}
-{% endblock %}
+{% block relbar1 %}{{ super() }}{% endblock %}
+{% block rootrellink %}{{ super() }}{% endblock %}
+{% block relbaritems %}{{ super() }}{% endblock %}
 
-{% block sidebar1 %} 
-	{% include 'menu-' + version + '.html'%}
-{% endblock %}
+{% block sidebar1 %}{{ sidebar() }}{% endblock %}
+{% block sidebar2 %}{{ sidebar() }}{% endblock %}
 
-{% block sidebarsearch %} 
-	{{ super() }}
-{% endblock %}
+{% block sidebarsearch %}{{ super() }}{% endblock %}
 
-{% block relbar2 %} 
-{% endblock %}
+{% block relbar2 %}{% endblock %}
 
 {% block footer %}
 <div class="footer">
