--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -17,13 +17,13 @@
 
 {% block footer %}
 <div class="footer">
-    <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">
-        <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" />
+    <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">
+        <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" />
     </a>
     <br />
     This work is licensed under a
-    <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/">
-        Creative Commons Attribution-ShareAlike 3.0 Unported License
+    <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">
+        Creative Commons Attribution-ShareAlike 4.0 Unported License
     </a>.
 </div>
 {{ super() }}
