add uuid route for confd
GET /1.1/uuid

--- a/source/_templates/menu-14.20.html
+++ b/source/_templates/menu-14.20.html
@@ -1,1 +1,5 @@
-menu-1.2-production.html
+
+<ul id="doc-versions">
+	<li class="other"><a href="/dev">dev</a></li>
+	<li class="current"><span>Documentation version: <strong>production</strong></span></li>
+</ul>
