--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -2,7 +2,7 @@
 
 {% block doctype %}<!doctype html>{% endblock %}
 
-{% block extrahead %}<link rel="stylesheet" href="{{ pathto('_static/css/xivo.css', 1) }}" type="text/css" />{% endblock %}
+{% block extrahead %}<link rel="stylesheet" href="{{ pathto('_static/css/wazo.css', 1) }}" type="text/css" />{% endblock %}
 
 {% block relbar1 %}{{ super() }}{% endblock %}
 {% block rootrellink %}{{ super() }}{% endblock %}
